# TestHarness-SPI-Pico-SDK

./: CMakeLists.txt  Readme.md
spi_master/: CMakeLists.txt  master_output_correct.txt  master_output_error_0.txt  master_output_error_1.txt  spi_master.c
spi_slave/: CMakeLists.txt  spi_slave.c
